<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_bar_meta"
        android:icon="@drawable/baseline_description_white_24"
        android:title="@string/menu_meta"
        app:showAsAction="always"/>
    <item
        android:id="@+id/app_bar_photo"
        android:icon="@drawable/baseline_add_a_photo_white_24"
        android:title="@string/menu_add_picture"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_rec"
        android:icon="@drawable/baseline_mic_white_24"
        android:title="@string/menu_add_record"
        app:showAsAction="always"/>
    <item
        android:id="@+id/app_bar_loc"
        android:icon="@drawable/baseline_add_location_white_24"
        android:title="@string/menu_set_location"
        app:showAsAction="always"/>
</menu>